--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
